--- a/src/components/game/Game.module.scss
+++ b/src/components/game/Game.module.scss
@@ -1,3 +1,5 @@
+@import '../../index.scss';
+
 .game {
   margin: 0 auto;
   width: 100%;
@@ -14,10 +16,20 @@
     background-repeat: no-repeat;
     background-position: center;
     height: 28rem;
+
+    @include mobile {
+      width: 100%;
+      background-size: 75%;
+      background-position: 50% 28%;
+    }
   }
 
   .bottom {
     margin-top: -16rem;
+
+    @include mobile {
+      margin-top: -20rem;
+    }
   }
 
   .result {
@@ -25,6 +37,10 @@
     margin: 0 auto;
     width: 50rem;
     justify-content: space-between;
+
+    @include mobile {
+      width: 100%;
+    }
 
     .player {
       display: flex;
@@ -43,23 +59,42 @@
       flex-direction: column;
       align-items: center;
       margin-top: 6rem;
+      width: 16rem;
+
+      @include mobile {
+        position: absolute;
+        bottom: 12rem;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
 
       span {
         color: #fff;
         font-size: 2.5rem;
         margin-bottom: 1rem;
+
+        @include mobile {
+          font-size: 3rem;
+        }
       }
 
       button {
         border: none;
         cursor: pointer;
-        border-radius: 5px;
+        border-radius: 8px;
         font-size: 10px;
         font-family: var(--font-family);
         background-color: #fff;
         letter-spacing: 2px;
         padding: 0.5rem 2rem;
         color: rgb(207, 69, 69);
+
+        @include mobile {
+          color: var(--dark-text);
+          padding: 1rem 3rem;
+          font-size: 16px;
+        }
       }
     }
   }
