--- a/src/components/circle/Circle.module.scss
+++ b/src/components/circle/Circle.module.scss
@@ -1,3 +1,5 @@
+@import '../../index.scss';
+
 .circle {
   width: 12rem;
   height: 12rem;
@@ -8,8 +10,10 @@
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 
-  .red {
-    border: 1rem solid rgb(255, 174, 81);
+  @include mobile {
+    width: 9rem;
+    height: 9rem;
+    padding: 2rem;
   }
 
   &:hover {
