--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,3 +1,5 @@
+@import '../../index.scss';
+
 .header {
   border: 2px solid var(--header-outline);
   border-radius: 1rem;
@@ -9,11 +11,19 @@
   width: 40rem;
   margin: 0 auto;
 
+  @include mobile {
+    width: 100%;
+  }
+
   .logo {
     padding: 0.4rem;
 
     img {
       height: 5rem;
+
+      @include mobile {
+        height: 4rem;
+      }
     }
   }
 
@@ -26,6 +36,10 @@
     height: 100%;
     width: 8rem;
     border-radius: 0.5rem;
+
+    @include mobile {
+      width: 6rem;
+    }
 
     .title {
       color: var(--score-text);
