--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -29,9 +29,10 @@
       left: 0;
       right: 0;
       margin: auto;
-      width: 12rem;
-      padding: 1rem 2rem;
-      font-size: 20px;
+      width: 10rem;
+      padding: 1rem 1.5rem;
+      font-size: 16px;
+      bottom: 6rem;
     }
   }
 }
