--- a/src/components/game/Game.module.scss
+++ b/src/components/game/Game.module.scss
@@ -38,7 +38,7 @@
     width: 50rem;
     justify-content: space-between;
 
-    @include mobile {
+    @include tablet {
       width: 100%;
     }
 
